--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,12 @@
       <groupId>org.jscience</groupId>
       <artifactId>jscience</artifactId>
       <version>4.3.1</version>
-    </dependency>    
+    </dependency>
+    <dependency>
+  <groupId>org.apache.httpcomponents</groupId>
+  <artifactId>httpclient</artifactId>
+  <version>4.4</version>
+</dependency>
     <dependency>
       <groupId>org.webjars</groupId>
       <artifactId>jquery</artifactId>
